--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,237 @@
 .App {
-  text-align: center;
+    max-width: 96%;
+    margin-left: 2%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.landing-page {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.nav-bar {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: rgb(223, 48, 48);
+    width: 100%;
+    height: 200px;
+}
+.nav-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 250px;
+    height: 150px;
+    background-color: #2c3968;
+    color: white;
+    font-size: 1.6rem;
+    font-family: cursive;
+    font-weight: bold;
+    clip-path: ellipse();
+}
+.prompt-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(223, 48, 48);
+    color: white;
+    font-size: 1.6rem;
+    width: 100%;
+    height: 150px;
+}
+.prompt-box {
+    font-size: 2rem;
+    display: flex;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.hero-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+#hero {
+    height: 90%;
+    width: 100%;
+    /* opacity: 80%; */
+}
+.login-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.swap-proceed-container {
+    border: solid green 2px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
-.App-link {
-  color: #61dafb;
+.ticket-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2%;
+    background-color: rgb(180, 185, 189);
+}
+.ticket-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    color: #282c34;
+    padding: 1%;
+}
+.ticket-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1%;
+}
+.form-instructions {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 2%;
+    font-size: 1.4rem;
+    color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ticket-holder {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.button {
+    height: 35px;
+    width: 80px;
+    border-radius: 10%;
+    margin-left: 1%;
+    margin-top: 5%;
+    background-color: #2c3968;
+    color: white;
+}
+.button:hover {
+    background-color: rgb(231, 219, 219);
+    color: rgb(26, 71, 135);
+}
+
+#triangle-right {
+    width: 0;
+    height: 0;
+    border-top: 50px solid transparent;
+    border-left: 100px solid #2c3968;
+    border-bottom: 50px solid transparent;
+    margin-right: 2%;
+}
+#rectangle {
+    width: 100px;
+    height: 50px;
+    background: #2c3968;
+    margin-left: 2%;
+}
+
+.main-ticket {
+    position: relative;
+    background: #fff;
+    width: 300px;
+    margin: 30px auto;
+    box-shadow: 0px 2px 38px rgba(0, 0, 0, 0.2);
+    padding: 3%;
+}
+.main-ticket:after,
+.main-ticket:before {
+    content: "";
+    position: absolute;
+    left: auto;
+    background: none;
+    z-index: -1;
+}
+.main-ticket:after {
+    width: 90%;
+    height: 10px;
+    top: 30px;
+    right: 8px;
+    -webkit-transform: rotate(-3deg);
+    -moz-transform: rotate(-3deg);
+    -o-transform: rotate(-3deg);
+    -ms-transform: rotate(-3deg);
+    transform: rotate(-3deg);
+    -webkit-box-shadow: 0px -20px 36px 5px #295d92;
+    -moz-box-shadow: 0px -20px 36px 5px #295d92;
+    box-shadow: 0px -25px 35px 0px rgba(0, 0, 0, 0.5);
+}
+
+.main-ticket:before {
+    width: 10px;
+    height: 95%;
+    top: 5px;
+    right: 18px;
+    -webkit-transform: rotate(3deg);
+    -moz-transform: rotate(3deg);
+    -o-transform: rotate(3deg);
+    -ms-transform: rotate(3deg);
+    transform: rotate(3deg);
+    -webkit-box-shadow: 20px 0px 25px 5px #295d92;
+    -moz-box-shadow: 20px 0px 25px 5px #295d92;
+    box-shadow: 22px 0px 35px 0px rgba(0, 0, 0, 0.5);
+}
+/*  */
+/*  */
+.locked-ticket {
+    position: relative;
+    background: rgb(58, 216, 6);
+    width: 300px;
+    margin: 30px auto;
+    box-shadow: 0px 2px 38px rgba(0, 0, 0, 0.2);
+    padding: 3%;
+}
+.locked-ticket:after,
+.locked-ticket:before {
+    content: "";
+    position: absolute;
+    left: auto;
+    background: none;
+    z-index: -1;
+}
+.locked-ticket:after {
+    width: 90%;
+    height: 10px;
+    top: 30px;
+    right: 8px;
+    -webkit-transform: rotate(-3deg);
+    -moz-transform: rotate(-3deg);
+    -o-transform: rotate(-3deg);
+    -ms-transform: rotate(-3deg);
+    transform: rotate(-3deg);
+    -webkit-box-shadow: 0px -20px 36px 5px #295d92;
+    -moz-box-shadow: 0px -20px 36px 5px #295d92;
+    box-shadow: 0px -25px 35px 0px rgba(0, 0, 0, 0.5);
+}
+
+.locked-ticket:before {
+    width: 10px;
+    height: 95%;
+    top: 5px;
+    right: 18px;
+    -webkit-transform: rotate(3deg);
+    -moz-transform: rotate(3deg);
+    -o-transform: rotate(3deg);
+    -ms-transform: rotate(3deg);
+    transform: rotate(3deg);
+    -webkit-box-shadow: 20px 0px 25px 5px #295d92;
+    -moz-box-shadow: 20px 0px 25px 5px #295d92;
+    box-shadow: 22px 0px 35px 0px rgba(0, 0, 0, 0.5);
 }
