--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@
     width: 250px;
     height: 150px;
     background-color: #2c3968;
-    color: white;
+    color: #f1f1f1;
     font-size: 1.6rem;
     font-family: cursive;
     font-weight: bold;
@@ -40,7 +40,7 @@
     justify-content: center;
     align-items: center;
     background-color: rgb(223, 48, 48);
-    color: white;
+    color: #f1f1f1;
     font-size: 1.6rem;
     width: 100%;
     height: 150px;
@@ -106,7 +106,7 @@
     align-items: flex-start;
     margin-bottom: 2%;
     font-size: 1.4rem;
-    color: white;
+    color: #f1f1f1;
 }
 
 .ticket-holder {
@@ -121,7 +121,7 @@
     margin-left: 1%;
     margin-top: 5%;
     background-color: #2c3968;
-    color: white;
+    color: #f1f1f1;
 }
 .button:hover {
     background-color: rgb(231, 219, 219);
