--- a/src/App.css
+++ b/src/App.css
@@ -1,66 +1,9 @@
 .App {
     max-width: 96%;
     margin-left: 2%;
+    margin-right: 2%;
 }
 
-.landing-page {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-}
-.nav {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.nav-bar {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: rgb(223, 48, 48);
-    width: 100%;
-    height: 200px;
-}
-.nav-logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 250px;
-    height: 150px;
-    background-color: #2c3968;
-    color: #f1f1f1;
-    font-size: 1.6rem;
-    font-family: cursive;
-    font-weight: bold;
-    clip-path: ellipse();
-}
-.prompt-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(223, 48, 48);
-    color: #f1f1f1;
-    font-size: 1.6rem;
-    width: 100%;
-    height: 150px;
-}
-.prompt-box {
-    font-size: 2rem;
-    display: flex;
-}
-
-.hero-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-#hero {
-    height: 90%;
-    width: 100%;
-    /* opacity: 80%; */
-}
 .login-container {
     display: flex;
     flex-direction: column;
@@ -94,63 +37,38 @@
     color: #282c34;
     padding: 1%;
 }
-.ticket-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1%;
-}
-.form-instructions {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-bottom: 2%;
-    font-size: 1.4rem;
-    color: #f1f1f1;
-}
 
 .ticket-holder {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .button {
-    height: 35px;
-    width: 80px;
+    height: 50px;
+    width: 140px;
     border-radius: 10%;
     margin-left: 1%;
     margin-top: 5%;
     background-color: #2c3968;
     color: #f1f1f1;
+    font-size: 1.2rem;
+    font-family: Arial black;
+    /* color: black; */
 }
 .button:hover {
     background-color: rgb(231, 219, 219);
     color: rgb(26, 71, 135);
 }
 
-#triangle-right {
-    width: 0;
-    height: 0;
-    border-top: 50px solid transparent;
-    border-left: 100px solid #2c3968;
-    border-bottom: 50px solid transparent;
-    margin-right: 2%;
-}
-#rectangle {
-    width: 100px;
-    height: 50px;
-    background: #2c3968;
-    margin-left: 2%;
-}
-
-.main-ticket {
+/* .main-ticket {
     position: relative;
     background: #fff;
     width: 300px;
     margin: 30px auto;
     box-shadow: 0px 2px 38px rgba(0, 0, 0, 0.2);
     padding: 3%;
-}
+} */
 .main-ticket:after,
 .main-ticket:before {
     content: "";
